--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   # dio: ^4.0.6
   # freezed: ^2.0.5
   provider: ^6.0.3
+
   # shared_preferences: ^2.0.15
   cached_network_image: any
   # modal_progress_hud_nsn: ^0.2.1
@@ -59,6 +60,7 @@ dependencies:
   location: ^4.0.0
   dropdown_search: any
   syncfusion_flutter_datepicker: any
+  flutter_image_slideshow: ^0.1.4
 
 dev_dependencies:
   flutter_test:
