--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -29,7 +29,6 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -61,6 +60,12 @@ dependencies:
   dropdown_search: any
   syncfusion_flutter_datepicker: any
   flutter_image_slideshow: ^0.1.4
+  google_maps_flutter: ^2.2.1
+  permission_handler: ^10.0.0
+  geocoding: ^2.0.4
+  flutter_geocoder: ^0.2.2-nullsafety
+  get: ^4.6.5
+  shared_preferences: ^2.0.15
 
 dev_dependencies:
   flutter_test:
@@ -78,7 +83,6 @@ dev_dependencies:
 
 # The following section is specific to Flutter.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
